# Tennis-Scheduler

./: .coverage  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  一键启动.bat
.github/workflows/: ci.yml
data/: fs.json  ms.json  players.json  sample_players.json
data/matches/: men_doubles.json  men_singles.json  mixed_doubles.json  sample_men_doubles.json  sample_women_doubles.json  sample_women_singles.json  women_doubles.json  women_singles.json
data/matchs/: sample_men_singles.json  sample_mixed_doubles.json
examples/: gurobi_facility_location_demo.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx
frontend/src/contexts/: LanguageContext.jsx
frontend/src/pages/: DrawManager.jsx  PlayerManager.jsx  SchedulerConsole.jsx
frontend/src/services/: eelBridge.js
src/: cli.py  constraints.py  cost_evaluator.py  dag_builder.py  data_parser.py  gurobi_facility_location.py  gurobi_scheduler.py  hooks.py  models.py  schedule_output.py  schedule_result.txt  scheduler_engine.py  scheduler_pipeline.py  search_strategies.py
src/results/: schedule_result_20260331_164534.txt
tests/: conftest.py  test_app_gui_alignment.py  test_cost_evaluator.py  test_dag_builder.py  test_scheduler_engine.py
tools/: check_players.py
